--- a/cv.rmd
+++ b/cv.rmd
@@ -61,10 +61,9 @@ Aside
 # datadrivencv::build_network_logo(CV$entries_data)
 ```
 
-
 ```{r}
 if(params$pdf_mode){
-  cat("View and download this CV with links at https://github.com/JaneChik/cv or [here](https://drive.google.com/drive/folders/11J6q1Qji4Ab4Z6LnwtBZl5XUZ-p3zPMS?usp=sharing)")
+  cat("View and download the latest version of this CV with links at https://github.com/JaneChik/cv or [here](https://drive.google.com/drive/folders/11J6q1Qji4Ab4Z6LnwtBZl5XUZ-p3zPMS?usp=sharing)")
 } else {
   cat("<i class='fas fa-download'></i> Download a PDF of this CV [here](https://github.com/JaneChik/cv) or [here](https://drive.google.com/drive/folders/11J6q1Qji4Ab4Z6LnwtBZl5XUZ-p3zPMS?usp=sharing)")
 }
@@ -87,7 +86,8 @@ CV %>% print_skill_bars()
 ```
 
 
-Languages {#skills}
+
+Languages {#languages}
 --------------------------------------------------------------------------------
 
 ```{r}
