update cv and resume

--- a/cv.rmd
+++ b/cv.rmd
@@ -23,7 +23,7 @@ source("cv_printing_functions.r")
 # Read in all data and initialize a CV printer object
 CV <- create_CV_object(
   data_location = "https://docs.google.com/spreadsheets/d/1flNhCgpHqQze6IjGkt9S8eMzBJz6zA9NqgLFDmE_ug4/edit?usp=sharing",  
-  pdf_mode = params$pdf_mode
+  pdf_mode = params$pdf_mode, 
 )
 
 ```
